# cs698-repo

./: .gitignore  .last_build_id  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  CLAUDE.md  Issue #1 Devspec  Issue #1 Devspec.md  Issue #2 Devspec  Issue #2 Devspec.md  Issue #3 Devspec.md  P4_SUBMISSION.md  README.md  amplify.yml  antigravity_api.py  cmdline.txt  conversations_export.html  flutter_bootstrap.js  get_cmdline.py  index.html  main.dart.js  nginx.conf  openapi.yaml  package.json  probe_pb.py  sitemap.xml  version.json
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  proxy_backend.sh
api/: index.html
apps/backend/: .env.example  Dockerfile  Dockerfile.test  README.md  alembic.ini  debug_pytest_main.py  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  mutation_report.md  pyproject.toml  pyrefly.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py
apps/backend/app/: config.py  dependencies.py  e2e_overrides.py  main.py
apps/backend/app/api/: admin_router.py  auth_router.py  chat_router.py  health_router.py  test_router.py
apps/backend/app/core/: database.py  error_handlers.py  exceptions.py  logging.py  redis.py  security.py
apps/backend/app/middleware/: body_limit.py  csrf.py  request_id.py  security_headers.py
apps/backend/app/models/: __init__.py  chat_message.py  chat_session.py  document.py  e2ee_key.py  revoked_token.py  user.py
apps/backend/app/rag/: chunker.py  embedder.py  llm_client.py  pdf_parser.py  prompts.py  qdrant_store.py  retriever.py
apps/backend/app/repositories/: document_repo.py  revoked_token_repo.py  session_repo.py  user_repo.py
apps/backend/app/schemas/: auth_schemas.py  chat_schemas.py  common_schemas.py
apps/backend/app/services/: auth_service.py  conversation_service.py  document_service.py  rag_service.py  rate_limiter.py  token_cleanup.py  token_service.py
apps/backend/dev_test/: docker-compose.dev.yml
apps/backend/scripts/: check_qdrant.py  delete_all_docs.py  entrypoint.sh  generate_keys.py  run_mutation_tests.sh  run_p5_tests.sh  run_tests.bat  run_tests.sh  seed_e2e_qdrant.py  test_upload.py
apps/backend/tests/: conftest.py  test_admin_api.py  test_api.py  test_auth_service.py  test_body_limit.py  test_chat_api.py  test_conversation_service.py  test_csrf_middleware.py  test_document_service.py  test_error_handlers.py  test_logging.py  test_pdf_parser.py  test_qdrant_store.py  test_rag_logic.py  test_rate_limiter.py  test_repositories.py  test_schemas.py  test_security.py  test_services_extra.py  test_token_cleanup.py  test_token_service.py  test_trivial.py
assets/: AssetManifest.bin.json  NOTICES
backend/: Dockerfile  README.md  debug_pytest_main.py  pyproject.toml  pyrefly.toml  pyreflyout.txt  ruff_report.txt
backend/alembic/: env.py
backend/app/: dependencies.py  e2e_overrides.py  main.py
backend/app/api/: admin_router.py  auth_router.py  chat_router.py  health_router.py  test_router.py
backend/app/core/: logging.py  redis.py
backend/app/middleware/: security_headers.py
backend/app/models/: chat_message.py  user.py
backend/app/rag/: pdf_parser.py
backend/app/repositories/: revoked_token_repo.py  session_repo.py  user_repo.py
backend/app/schemas/: common_schemas.py
backend/app/services/: conversation_service.py  token_cleanup.py  token_service.py
backend/dev_test/: docker-compose.dev.yml
backend/docker_configs/: Dockerfile.test  docker-compose.e2e.yml  docker-compose.test.yml
backend/scripts/: check_qdrant.py  delete_all_docs.py  run_local_tests.sh  run_mutation_tests.sh  run_tests.sh  seed_e2e_qdrant.py  test_upload.py
backend/tests/: conftest.py  err_trace.txt  err_trace2.txt  err_trace3.txt  err_trace_apis.txt  err_trace_chat.txt  err_trace_combined.txt  err_trace_combined_2.txt  err_trace_convo.txt  err_trace_doc.txt  err_trace_rag.txt  err_trace_token.txt  err_trace_token2.txt  err_trace_token3.txt  err_trace_token4.txt  full_test_run.txt  full_test_run2.txt  test_admin_api.py  test_api.py  test_auth_service.py  test_chat_api.py  test_pdf_parser.py  test_qdrant_store.py  test_rag_logic.py  test_repositories.py  test_security.py  test_token_cleanup.py  test_trivial.py
docs/: ARCHITECTURE.md  OPENAPI_GUIDE.md  P4_Module_Auth.md  P4_Module_RAG.md  P4_Reflection.md  P4_Story_1_Harmonized.md  P4_Story_2_Harmonized.md  P4_Unified_Architecture.md  README.md  index.html  integration_test_spec.md  mut_mut_documentation.md  openapi.yaml  operations-audit-2026-04-13.md  p5_test_specifications.md  pipeline-weakness-demo-2026-04-13.md  test_suite_report.md
docs-site/: docusaurus.config.js  package-lock.json
frontend/: .env.example  .env.web  .flutter-plugins-dependencies  (+17 more)
(+490 files in other folders)
